--- a/index.html
+++ b/index.html
@@ -141,9 +141,12 @@
   <div id="ideasList" contenteditable="true">[]</div>
 
   <script>
+
     const inputBox = document.getElementById('inputBox');
     const cardsContainer = document.getElementById('cards');
     const ideasList = document.getElementById('ideasList');
+
+    inputBox.focus();
 
 const pastelColors = [
   '#FFD6E8',
