--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
   min-width: 250px;
   text-align: center;
   z-index: 1000;
+  overflow:scroll;
+  width: auto;
+  max-width: 80%;
 }
 
 #title {
@@ -196,7 +199,7 @@ const pastelColors = [
 
       card.appendChild(textEl);
       card.appendChild(delBtn);
-      cardsContainer.appendChild(card);
+      cardsContainer.prepend(card);
       if (save) saveNotes();
     }
 
