--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     align-items: center;
     height:100vh;
     padding: 100px 20px 100px;
+    margin-bottom:100px;
   }
 
   @media (max-height: 500px) {
